# safe_crypto

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml
design/: README.md  crypto_primitives.rs
examples/: determine_work_factor.rs
src/: lib.rs  mock_crypto.rs  seeded_rng.rs
