[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "A convenience library providing abstractions for cryptographic functions."
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
name = "safe_crypto"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_crypto"
version = "0.3.0"

[dependencies]
maidsafe_utilities = "~0.15.0"
quick-error = "~1.2.2"
rust_sodium = "~0.9.0"
serde = { version = "~1.0.66", features = ["rc"] }
serde_derive = "~1.0.66"
unwrap = "~1.1.0"
lazy_static = { version = "~1.0.1", optional = true }
rand = { version = "~0.4.2", optional = true }
tiny-keccak = "~1.4.2"

[dev-dependencies]
rand = "~0.4.2"

[features]
mock = ["rand", "lazy_static"]
