[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "A convenience library providing abstractions for cryptographic functions."
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
name = "safe_crypto"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_crypto"
version = "0.8.0"
edition = "2018"

[dependencies]
lazy_static = { version = "~1.2.0", optional = true }
maidsafe_utilities = "~0.18.0"
quick-error = "~1.2.2"
rand = "~0.4.2"
rust_sodium = "~0.10.2"
scrypt = { version = "~0.1.2", default-features = false }
serde = { version = "~1.0.101", features = ["rc"] }
serde_derive = "~1.0.101"
tiny-keccak = "~1.5.0"
unwrap = "~1.2.0"

[features]
mock = ["lazy_static"]
